# firmware-project-template

./: .gitignore  CLAUDE.md  README.md  TEMPLATE-GUIDE.md  VAULT-BLUEPRINT.md  WORKFLOW.md  firmware-init.py  platformio.ini  vault-sync.py
.claude/commands/: promote.md  session-end.md  session-start.md  sync-status.md  sync-vault.md
.claude/rules/: coding-style.md  hardware.md  rtos.md  safety.md
.github/workflows/: ci.yml
Report/: (TEMPLATE) Report.md  engineer-simulation-report.md  phase2-phase3-review.md  user-simulation-20260301.md
cmake/: CMakeLists.txt
docs/: BRING-UP.md  DEBUGGING.md  DESIGN-REVIEW.md  FSD.md  HANDOFF.md  HARDWARE.md  PROTOCOL.md
lessonsLearned/: (TEMPLATE) LessonLearned.md
